k8s/domains/auth/workloads/api/infra/overlays/prod-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
spec:
  template:
    spec:
      containers:
        - name: api
