k8s/domains/auth/workloads/api/infra/overlays/prod-eu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api
spec:
  rules:
    - host: api.tma.com
      http:
        paths:
          - path: /v1/passkeys
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /v1/session
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /v1/auth/docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /.well-known/jwks.json
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3000
