k8s/domains/auth/workloads/api/infra/overlays/prod-eu/public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-public
spec:
  entryPoints:
    - https

  routes:
    - kind: Rule
      match: >-
        Host(`api.tma.com`) &&
        (PathPrefix(`/v1/passkeys`) ||
        PathPrefix(`/v1/session`))
      services:
        - name: api
          port: 3000
