k8s/domains/auth/workloads/api/infra/overlays/prod-eu/public-jwks-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-public-jwks
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: >-
        Host(`api.tma.com`) &&
        Path(`/.well-known/jwks.json`)
      services:
        - name: api
          port: 3000
